feature/preEntregaTres cambio animacion en index

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <video autoplay muted loop class="w-100 h-100" id="videoInicio">
                     <source src="./assets/video/video_index.mp4" type="video/mp4">
                 </video>
-                <div class="position-absolute text-center text-white contenedorInicio" data-aos="flip-left" 
+                <div class="position-absolute text-center text-white contenedorInicio" data-aos="flip-down" 
                      data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" data-aos-easing="ease-in-out"
                              data-aos-once="true">
                     <p class="text-uppercase tituloPrincipal m-0">Pensado 4 Gamers</p>
@@ -128,7 +128,7 @@
             </div>
             <div class="col-12 contenedorCard d-flex justify-content-evenly w-100 flex-wrap mt-5 mb-5">
                 <div class="cardRecomendado d-flex flex-column align-items-center justify-content-evenly p-2" 
-                    data-aos="fade-up" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
+                    data-aos="zoom-out" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
                     data-aos-easing="ease-in-out" data-aos-once="true">
                     <img class="imgInicio" src="./assets/img/elden_ring_recomendado.jpg" alt="card">
                     <p class="parrafo text-center text-white">Elden Ring es un videojuego de rol de acción en tercera persona, 
@@ -137,7 +137,7 @@
                         Shadows Die Twice.</p>
                 </div>
                 <div class="cardRecomendado d-flex flex-column align-items-center justify-content-evenly p-2"
-                    data-aos="fade-up" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
+                    data-aos="zoom-out" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
                     data-aos-easing="ease-in-out" data-aos-once="true">
                     <img class="imgInicio" src="./assets/img/valheim_recomendado.jpg" alt="card">
                     <p class="parrafo text-center text-white">Valheim tiene lugar en un mundo donde los vikingos asesinados van a 
@@ -146,7 +146,7 @@
                         Guiado únicamente por sus instintos y las pistas ocasionales de un cuervo.</p>
                 </div>
                 <div class="cardRecomendado d-flex flex-column align-items-center justify-content-evenly p-2"
-                    data-aos="fade-up" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
+                    data-aos="zoom-out" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
                     data-aos-easing="ease-in-out" data-aos-once="true">
                     <img class="imgInicio" src="./assets/img/rdr2_recomendado.jpg" alt="card">
                     <p class="parrafo text-center text-white">Red Dead Redemption 2 es un juego de acción y aventuras de temática 
@@ -154,7 +154,7 @@
                         entorno de mundo abierto que presenta una versión ficticia de los Estados Unidos en 1899.</p>
                 </div>
                 <div class="cardRecomendado d-flex flex-column align-items-center justify-content-evenly p-2"
-                    data-aos="fade-up" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
+                    data-aos="zoom-out" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
                     data-aos-easing="ease-in-out" data-aos-once="true">
                     <img class="imgInicio" src="./assets/img/factorio_recomendado.jpg" alt="card">
                     <p class="parrafo text-center text-white">Factorio es un videojuego de estrategia en tiempo real desarrollado por 
@@ -162,7 +162,7 @@
                         oficialmente el 14 de agosto de 2020.</p>
                 </div>
                 <div class="cardRecomendado d-flex flex-column align-items-center justify-content-evenly p-2"
-                    data-aos="fade-up" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
+                    data-aos="zoom-out" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
                     data-aos-easing="ease-in-out" data-aos-once="true">
                     <img class="imgInicio" src="./assets/img/new_world_recomendado.jpg" alt="card">
                     <p class="parrafo text-center text-white">New World es un videojuego de rol multijugador masivo en línea 
@@ -170,7 +170,7 @@
                         tarea de colonizar tierras modeladas a imagen y semejanza de la América Británica oriental.</p>
                 </div>
                 <div class="cardRecomendado d-flex flex-column align-items-center justify-content-evenly p-2"
-                    data-aos="fade-up" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
+                    data-aos="zoom-out" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
                     data-aos-easing="ease-in-out" data-aos-once="true">
                     <img class="imgInicio" src="./assets/img/project_zomboid_recomendados.jpg" alt="card">
                     <p class="parrafo text-center text-white">En Project Zomboid , el jugador tiene como objetivo sobrevivir el 
