feature/preEntregaTres se agrego alt y tittle a las imagenes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Pensado 4 Gamers contiene toda la información de los últimos juegos
     para PC y las diferentes consolas">
     <meta name="keywords" content="Juegos PC, Juegos Consolas, Playstation 4, Xbox Series X">
-    <title>Pensado 4 Gamers | Inicio</title>
+    <title>Pensado 4 Gamers | Toda la información de los juego mas populares</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark nav">
             <div class="container-fluid">
                 <a class="navbar-brand divImgNav" href="./index.html">
-                    <img src="./assets/img/logo_juego.png" alt=""
+                    <img src="./assets/img/logo_juego.png" alt="Logo imagen Header" title="Logo pagina Pensado 4 Gamers"
                         class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -82,9 +82,10 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./assets/img/ark_destacado.jpg" class="d-block w-100" alt="Juego ARK Survivor Evolved">
+                            <img src="./assets/img/ark_destacado.jpg" class="d-block w-100" alt="Juego ARK Survivor Evolved"
+                                 title="Juego de supervivencia ambientada en la época de los dinosaurios">
                             <div class="carousel-caption d-none d-md-block contenedorIndex">
-                                <h4 class="h4Tittle m-0">ARK Survivor Evolved</h4>
+                                <h2 class="h4Tittle m-0">ARK Survivor Evolved</h2>
                                 <p class="parrafo m-0 p-2 text-center">Survival Evolved, es un nuevo juego de supervivencia y mundo abierto. A lo largo de la aventura
                                     tendremos que cazar para sobrevivir, crear objetos, mejorar nuestra tecnología, construir refugios,
                                     etcétera. Todo ello mientras exploramos una gigantesca isla repleta de dinosaurios, lo que se perfila
@@ -92,9 +93,10 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/7_days_to_day_destacado.jpg" class="d-block w-100" alt="Juego 7 Days to Die">
+                            <img src="./assets/img/7_days_to_day_destacado.jpg" class="d-block w-100" alt="Juego 7 Days to Die"
+                                 title="Juego de supervivencia donde te enfrentas a oleadas de zombies">
                             <div class="carousel-caption d-none d-md-block contenedorIndex">
-                                <h4 class="h4Tittle m-0">7 Days to Die</h4>
+                                <h2 class="h4Tittle m-0">7 Days to Die</h2>
                                 <p class="parrafo m-0 p-2 text-center">7 Days to Die, es un videojuego mash up de acción en primera y tercera persona, el videojuego combina 
                                     el combate, la mejora del personaje por niveles, la elaboración de materiales, la construcción, el
                                     saqueo, la minería, la exploración, la comercialización, la agricultura y la personalización del
@@ -102,9 +104,10 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/rust_destacado.jpg" class="d-block w-100" alt="Juebo Rust">
+                            <img src="./assets/img/rust_destacado.jpg" class="d-block w-100" alt="Juebo Rust"
+                                 title="Juego de supervivencia donde te enfrentas a otros jugadores">
                             <div class="carousel-caption d-none d-md-block contenedorIndex">
-                                <h4 class="h4Tittle m-0">Rust</h4>
+                                <h2 class="h4Tittle m-0">Rust</h2>
                                 <p class="parrafo m-0 p-2 text-center">Rust, es una aventura de acción y supervivencia en primera persona de corte sandbox en el que 
                                     debemos colaborar con otros jugadores en un mundo persistente en el que el único objetivo es
                                     sobrevivir.</p>
@@ -130,7 +133,8 @@
                 <div class="cardRecomendado d-flex flex-column align-items-center justify-content-evenly p-2" 
                     data-aos="zoom-out" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
                     data-aos-easing="ease-in-out" data-aos-once="true">
-                    <img class="imgInicio" src="./assets/img/elden_ring_recomendado.jpg" alt="card">
+                    <img class="imgInicio" src="./assets/img/elden_ring_recomendado.jpg" alt="Juego Elden Ring"
+                         title="Juego de Rol y aventura en tercera persona">
                     <p class="parrafo text-center text-white">Elden Ring es un videojuego de rol de acción en tercera persona, 
                         con una jugabilidad centrada en el combate y la exploración. Presenta características similares de otros 
                         juegos desarrollados por FromSoftware, tales como la saga Dark Souls, Bloodborne y Sekiro: 
@@ -139,7 +143,8 @@
                 <div class="cardRecomendado d-flex flex-column align-items-center justify-content-evenly p-2"
                     data-aos="zoom-out" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
                     data-aos-easing="ease-in-out" data-aos-once="true">
-                    <img class="imgInicio" src="./assets/img/valheim_recomendado.jpg" alt="card">
+                    <img class="imgInicio" src="./assets/img/valheim_recomendado.jpg" alt="Juego Valheim"
+                         title="Juego de aventura ambientada en la época de los vikingos ">
                     <p class="parrafo text-center text-white">Valheim tiene lugar en un mundo donde los vikingos asesinados van a 
                         demostrar que son aptos para los pasillos de Valhalla . Como tal, el jugador comienza sin nada y pronto 
                         descubre que para llegar al más allá nórdico, debe derrotar a los males que acechan a Valheim. 
@@ -148,7 +153,8 @@
                 <div class="cardRecomendado d-flex flex-column align-items-center justify-content-evenly p-2"
                     data-aos="zoom-out" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
                     data-aos-easing="ease-in-out" data-aos-once="true">
-                    <img class="imgInicio" src="./assets/img/rdr2_recomendado.jpg" alt="card">
+                    <img class="imgInicio" src="./assets/img/rdr2_recomendado.jpg" alt="Juego Red Dead Redemption"
+                         title="Juego de aventura ambientada en el viejo Oeste, Vaqueros e Indios">
                     <p class="parrafo text-center text-white">Red Dead Redemption 2 es un juego de acción y aventuras de temática 
                         occidental . Jugado desde una perspectiva en primera o tercera persona , el juego está ambientado en un 
                         entorno de mundo abierto que presenta una versión ficticia de los Estados Unidos en 1899.</p>
@@ -156,7 +162,8 @@
                 <div class="cardRecomendado d-flex flex-column align-items-center justify-content-evenly p-2"
                     data-aos="zoom-out" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
                     data-aos-easing="ease-in-out" data-aos-once="true">
-                    <img class="imgInicio" src="./assets/img/factorio_recomendado.jpg" alt="card">
+                    <img class="imgInicio" src="./assets/img/factorio_recomendado.jpg" alt="Juego Factorio"
+                         title="Juego de gestión de recursos y construcción en 2d">
                     <p class="parrafo text-center text-white">Factorio es un videojuego de estrategia en tiempo real desarrollado por 
                         Wube Software. Ha estado disponible como videojuego de acceso anticipado desde 2013 y ha sido lanzado 
                         oficialmente el 14 de agosto de 2020.</p>
@@ -164,7 +171,8 @@
                 <div class="cardRecomendado d-flex flex-column align-items-center justify-content-evenly p-2"
                     data-aos="zoom-out" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
                     data-aos-easing="ease-in-out" data-aos-once="true">
-                    <img class="imgInicio" src="./assets/img/new_world_recomendado.jpg" alt="card">
+                    <img class="imgInicio" src="./assets/img/new_world_recomendado.jpg" alt="Juego New World"
+                         title="Juego de aventura online ambientada en la época colonial ">
                     <p class="parrafo text-center text-white">New World es un videojuego de rol multijugador masivo en línea 
                         desarrollado por Amazon Game Studios. Ambientado a mediados del siglo XVII, los jugadores tendrán la 
                         tarea de colonizar tierras modeladas a imagen y semejanza de la América Británica oriental.</p>
@@ -172,7 +180,8 @@
                 <div class="cardRecomendado d-flex flex-column align-items-center justify-content-evenly p-2"
                     data-aos="zoom-out" data-aos-offset="100" data-aos-delay="20" data-aos-duration="1000" 
                     data-aos-easing="ease-in-out" data-aos-once="true">
-                    <img class="imgInicio" src="./assets/img/project_zomboid_recomendados.jpg" alt="card">
+                    <img class="imgInicio" src="./assets/img/project_zomboid_recomendados.jpg" alt="Juego Project Zomboid"
+                         title="Juego de supervivencia de zombies en 2d ">
                     <p class="parrafo text-center text-white">En Project Zomboid , el jugador tiene como objetivo sobrevivir el 
                         mayor tiempo posible en un área apocalíptica y plagada de zombis alrededor de la ciudad de Louisville, 
                         Kentucky , conocida como 'Knox Country', que ha sido puesta en cuarentena por el gobierno..</p>
@@ -185,11 +194,18 @@
             <div class="col-md-6 col-sm-12 d-flex mt-3">
                 <h2 class="text-white h2Tittle fs-5">SÍGUENOS</h2>
                 <div class=" d-flex justify-content-end links">
-                    <a href="https://www.twitch.tv/" target="_blank"><img src="./assets/img/twitch_icon.png"></a>
-                    <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img
-                            src="./assets/img/facebook_icon.png"></a>
-                    <a href="https://www.instagram.com/" target="_blank"><img src="./assets/img/instagram_icon.png"></a>
-                    <a href="https://www.youtube.com/" target="_blank"><img src="./assets/img/youtube_icon.png"></a>
+                    <a href="https://www.twitch.tv/" target="_blank">
+                        <img src="./assets/img/twitch_icon.png" alt="Imagen twitch" title="Icono enlace a la página de Twitch">
+                    </a>
+                    <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank">
+                        <img src="./assets/img/facebook_icon.png" alt="Imagen facebook" title="Icono enlace a la página de Facebook">
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank">
+                        <img src="./assets/img/instagram_icon.png" alt="Imagen Instagram" title="Icono enlace a la página de Instagram">
+                    </a>
+                    <a href="https://www.youtube.com/" target="_blank">
+                        <img src="./assets/img/youtube_icon.png" alt="Imagen youtube" title="Icono enlace a la página de Youtube">
+                    </a>
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 pt-3 d-flex justify-content-end">
