--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Publica tu Opinión para ayudar a los demás jugadores en los juegos más complicados">
     <meta name="keywords" content="Opinión Juegos, Foro Juegos">
-    <title>Pensado 4 Gamers | Contacto</title>
+    <title>Contacto | Pensado 4 Gamers Toda la información de los juego mas populares</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -96,12 +96,18 @@
             <div class="col-md-6 col-sm-12 d-flex mt-3">
                 <h2 class="text-white h2Tittle fs-5">SÍGUENOS</h2>
                 <div class=" d-flex justify-content-end links">
-                    <a href="https://www.twitch.tv/" target="_blank"><img src="../assets/img/twitch_icon.png"></a>
-                    <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img
-                            src="../assets/img/facebook_icon.png"></a>
-                    <a href="https://www.instagram.com/" target="_blank"><img
-                            src="../assets/img/instagram_icon.png"></a>
-                    <a href="https://www.youtube.com/" target="_blank"><img src="../assets/img/youtube_icon.png"></a>
+                    <a href="https://www.twitch.tv/" target="_blank">
+                        <img src="../assets/img/twitch_icon.png" alt="Imagen twitch" title="Icono enlace a la página de Twitch">
+                    </a>
+                    <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank">
+                        <img src="../assets/img/facebook_icon.png" alt="Imagen facebook" title="Icono enlace a la página de Facebook">
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank">
+                        <img src="../assets/img/instagram_icon.png" alt="Imagen Instagram" title="Icono enlace a la página de Instagram">
+                    </a>
+                    <a href="https://www.youtube.com/" target="_blank">
+                        <img src="../assets/img/youtube_icon.png" alt="Imagen youtube" title="Icono enlace a la página de Youtube">
+                    </a>
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 pt-3 d-flex justify-content-end">
