feature/preEntregaTres se modifico tittle y descripcion

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pensado 4 Gamers contiene toda la información de los últimos juegos
-    para PC y las diferentes consolas">
+    <meta name="description" content="Pensado 4 Gamers contiene toda la información de los últimos 
+        juegos para PC y para las consolas de videojuegos más modernas">
     <meta name="keywords" content="Juegos PC, Juegos Consolas, Playstation 4, Xbox Series X">
-    <title>Pensado 4 Gamers | Toda la información de los juego mas populares</title>
+    <title>Pensado 4 Gamers | Información de todos los juegos</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -32,7 +32,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 lista justify-content-end">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" href="#">Inicio</a>
+                            <a class="nav-link active text-white" href="#" >Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" aria-current="page" href="./pages/analisis.html">Análisis</a>
