--- a/pages/analisis.html
+++ b/pages/analisis.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contiene los análisis más populares de los juegos de PC y las diferentes consolas">
+    <meta name="description" content="Contiene un análisis detallado de los últimos juegos de PC y de consola, 
+        con información oficial de los desarrolladores">
     <meta name="keywords" content="Análisis PC, Análisis Consola, información Juegos">
-    <title>Análisis | Pensado 4 Gamers Toda la información de los juego mas populares</title>
+    <title>Análisis | Pensado 4 Gamers Información de todos los juegos</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -20,7 +21,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark nav">
             <div class="container-fluid">
                 <a class="navbar-brand divImgNav" href="../index.html">
-                    <img src="../assets/img/logo_juego.png" alt=""
+                    <img src="../assets/img/logo_juego.png" alt="Logo imagen Header" title="Logo pagina Pensado 4 Gamers"
                         class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
