--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Publica tu Opinión para ayudar a los demás jugadores en los juegos más complicados">
+    <meta name="description" content="Publica tu Opinión, Trucos, Secretos, Atajos para ayudar a los demás 
+        jugadores a avanzar en los juegos más difíciles de PC y Consola">
     <meta name="keywords" content="Opinión Juegos, Foro Juegos">
-    <title>Contacto | Pensado 4 Gamers Toda la información de los juego mas populares</title>
+    <title>Contacto | Pensado 4 Gamers Información de todos los juegos</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -19,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark nav">
             <div class="container-fluid">
                 <a class="navbar-brand divImgNav" href="../index.html">
-                    <img src="../assets/img/logo_juego.png" alt=""
+                    <img src="../assets/img/logo_juego.png" alt="Logo imagen Header" title="Logo pagina Pensado 4 Gamers"
                         class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
