feature/preEntregaTres se agrego pagina error

--- a/pages/error.html
+++ b/pages/error.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Publica tu Opinión, Trucos, Secretos, Atajos para ayudar a los demás 
-        jugadores a avanzar en los juegos más difíciles de PC y Consola">
-    <meta name="keywords" content="Opinión Juegos, Foro Juegos">
-    <title>Contacto | Pensado 4 Gamers Información de todos los juegos</title>
+    <meta name="description" content="Pagina de error">
+    <meta name="keywords" content="">
+    <title>Error | Pensado 4 Gamers Información de todos los juegos</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -34,7 +33,7 @@
                             <a class="nav-link text-white" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page" href="./analisis.html">Análisis</a>
+                            <a class="nav-link text-white" href="./analisis.html">Análisis</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="./avances.html">Avances</a>
@@ -43,7 +42,7 @@
                             <a class="nav-link text-white" href="./guias.html">Guías</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-white" href="#">Contacto</a>
+                            <a class="nav-link text-white" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -52,43 +51,11 @@
     </header>
     <main class="container-fluid">
         <section class="row">
-            <div class="col-12 d-flex flex-column justify-content-center align-items-center mt-4">
-                <h1 class="text-white h1Tittle">Comparte tus Juegos Favoritos</h1>
-                <p class="text-white text-center parrafo">Comparte tus juegos favoritos, trucos, secretos y ayuda al resto de 
-                    usuario a completar las misiones o los juegos más difíciles. </p>
-            </div>
             <div class="col-12">
-                <div class="row">
-                    <div class="col-md-7 col-sm-12 d-flex justify-content-center">
-                        <form class="mt-5 mb-5 formulario" action="./error.html">
-                            <div class="mb-3">
-                                <input type="text" class="form-control" id="" placeholder="Nombre" required>
-                            </div>
-                            <div class="mb-3">
-                                <input type="email" class="form-control" id="" placeholder="Correo Electrónico" required
-                                    aria-describedby="emailHelp">
-                            </div>
-                            <div class="mb-3">
-                                <input type="text" class="form-control" id="" placeholder="Juego" required> 
-                            </div>
-                            <div class="mb-3">
-                                <textarea class="form-control" id="" rows="10" cols="30" required
-                                    placeholder="Trucos, secretos, etc."></textarea>
-                            </div>
-                            <button type="submit" class="btn text-white btnForm parrafo">Enviar</button>
-                            <button type="submit" class="btn text-white btnForm parrafo">Limpiar</button>
-                        </form>
-                    </div>
-                    <div class="col-md-5 col-sm-12 mt-5 mb-5 d-flex justify-content-center">
-                        <div class="gmap_canvas">
-                            <iframe class="gmap_canvas" id="gmap_canvas"
-                                src="https://maps.google.com/maps?q=california&t=&z=10&ie=UTF8&iwloc=&output=embed"
-                                frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-                            <a href="https://2yu.co">2yu</a>
-                            <a href="https://embedgooglemap.2yu.co">html embed google map</a>
-                        </div>
-                    </div>
-                </div>
+                <h1 class="text-white mt-5 h1Tittle text-center">Esta página web no está disponible</h1>
+            </div>
+            <div class="col-12 d-flex justify-content-center align-items-center">
+                <img class="imgError" src="../assets/img/error_404.png" alt="Imagen error">
             </div>
         </section>
     </main>
