--- a/pages/error.html
+++ b/pages/error.html
@@ -55,7 +55,10 @@
                 <h1 class="text-white mt-5 h1Tittle text-center">Esta página web no está disponible</h1>
             </div>
             <div class="col-12 d-flex justify-content-center align-items-center">
-                <img class="imgError" src="../assets/img/error_404.png" alt="Imagen error">
+                <picture class="imgError">
+                    <source media="(max-width: 768px)" srcset="../assets/img/error_404_mini.png"/>
+                    <img src="../assets/img/error_404.png" alt="Imagen error">
+                </picture>
             </div>
         </section>
     </main>
